# plantumlqeditor

./: .gitignore  AUTHORS  AUTHORS.md  CMakeLists.txt  README.md  assistantxmlreader.cpp  assistantxmlreader.h  filecache.cpp  filecache.h  logdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  plantumlqeditor.appdata.xml  plantumlqeditor.pro  plantumlqeditor.qrc  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  previewwidget.cpp  previewwidget.h  recentdocuments.cpp  recentdocuments.h  settingsconstants.h  textedit.cpp  textedit.h  utils.cpp  utils.h
tests/: assistantxmlreadertest.cpp  main.cpp
translations/: plantumlqeditor_ru.ts
